# celery-example

./: .env.example  Dockerfile  README.md  compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/celery_example/: __main__.py  tasks.py
tests/: conftest.py  test_tasks.py
